# Object_Detection_by_Infrared_ros

./: README.md  object_detection_by_camera.zsh
scripts/: detect.py  detect_and_publish_ros.py  detect_and_publish_ros_yolov5.py  models.py  test14.py
scripts/utils/: utils.py
scripts/须知_tzy/: 安装torch1.6  运行操作说明
src/msgs/object_msgs/: CMakeLists.txt  package.xml
src/msgs/object_msgs/msg/: BoundingBox.msg  BoundingBoxes.msg  ObjectCoordinate.msg  ObjectCoordinates.msg
